# final-project-whear

./: .gitignore  Makefile  README.md  SLIDES.md  main.c  makefile  nrf5340.h  nrf5340_app.ld  r  startup.c  startup_nrf5340.c  stm32f411re.ld
app_core/: CMakeLists.txt  prj.conf
app_core/boards/: nrf7002dk_nrf5340_cpuapp.overlay
app_core/src/: ipc_app.c  ipc_app.h  main.c  wifi_manager.c  wifi_manager.h  ws_client.c  ws_client.h
lib/: LCD_GFX.c
lib/display/: lcd_gfx.c  lcd_gfx.h  st7735.c  st7735.h
lib/yrm100/: yrm100.c  yrm100_uart_nrf5340.c  yrm100_uart_nrf5340.h
net_core/: ipc_net.c  ipc_net.h  main.c  nrf5340_net.h  nrf5340_net.ld  startup_nrf5340_net.c
net_core/lib/yrm100/: yrm100.h  yrm100_uart_nrf5340_net.c  yrm100_uart_nrf5340_net.h
shared/: ipc_shared.h
wifi/: platformio.ini
wifi/include/: config.h
wifi/src/: main.cpp
